--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="Style.css">
 <h1>MINITURE MARVEL</h1>
-<p>This website is a holder website and dose not have any functionality</p>
+<p>This website is a holder website and dose not have any functionality.</p>
 
 </head>
 <body>
